fix header video overflow

--- a/src/stylus/blocks/_header.styl
+++ b/src/stylus/blocks/_header.styl
@@ -1,5 +1,6 @@
 .header
   position relative
+  overflow hidden
   &__video
     width 100%
     height 70rem
